fixes repeating bg on mobile devices and deleted annoying point

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -152,7 +152,9 @@ header {
   min-height: auto;
   overflow-y: hidden;
   background-image: url(../img/bg.jpg);
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;;
+  background-position: center;
   /* background: url("../img/bg-pattern.png"), #7b4397; */
   /* fallback for old browsers */
   /* background: url("../img/bg-pattern.png"), -webkit-linear-gradient(to left, #7b4397, #dc2430); */
